--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "antd": "^4.20.1",
     "chart.js": "^3.5.0",
     "chartjs-adapter-moment": "^1.0.0",
     "moment": "^2.29.1",
