--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@apollo/client": "^3.6.0",
     "@tailwindcss/forms": "^0.4.0",
     "antd": "^4.20.1",
     "chart.js": "^3.5.0",
     "chartjs-adapter-moment": "^1.0.0",
+    "graphql": "^16.4.0",
+    "graphql2chartjs": "^0.3.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
