--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@apollo/client": "^3.6.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
     "@tailwindcss/forms": "^0.4.0",
     "antd": "^4.20.1",
     "chart.js": "^3.5.0",
@@ -16,9 +19,11 @@
     "graphql": "^16.4.0",
     "graphql2chartjs": "^0.3.1",
     "moment": "^2.29.1",
+    "primereact": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-transition-group": "^4.4.1"
   },
